working on searchmesssagenavbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import './../public/assets/scss/common.scss';
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   background-color: $primary-background;
   display: flex;
   align-items: center;
