--- a/src/pages/chatarea.scss
+++ b/src/pages/chatarea.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     position: relative;
     border-left: 1px solid rgba(#6E7377, .4);
+    border-right: 1px solid rgba(#6E7377, .6);
 
     &--size{
         height: 100%;
