--- a/src/layouts/chatslayout.scss
+++ b/src/layouts/chatslayout.scss
@@ -4,11 +4,8 @@
 
     &--size{
         width: 100%;
+        height: 100%;
     }
-
-    // &::-webkit-scrollbar-track{
-    //     border: none;
-    // }
 }
 
 .chats{
@@ -17,5 +14,5 @@
     margin: 30px 80px;
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    height: 100%;
 }
