--- a/src/components/profile.scss
+++ b/src/components/profile.scss
@@ -47,5 +47,18 @@
         margin-left: auto;
         font-size: 21px;
         cursor: pointer;
+        min-width: 40px;
+    }
+
+    &__input{
+        overflow-x: scroll;
+        font-size: 16px;
+        color: #CFD0D2;
+        border: none;
+        background-color: transparent;
+        outline: none;
+        border-bottom: 2px solid #018C7F;
+        padding-bottom: 10px;
+        width: 100%;
     }
 }
